# wide-fighter_yew

./: Cargo.toml  LICENSE  README.md  index.html  rustfmt.toml
css/: main.scss
src/: fight.rs  fightclub.rs  main.rs  results.rs  soldiers.rs
